Bug 11986 - smbclient sends an invalid filename when getting the disk free value against SMB2 server.
Summary: smbclient sends an invalid filename when getting the disk free value against ...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: libsmbclient (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-21 22:47 UTC by Jeremy Allison
Modified: 2016-07-04 07:13 UTC (History)
2 users (show)

See Also:


Attachments
git-am fix proposed for master. (1.52 KB, patch)
2016-06-21 22:58 UTC, Jeremy Allison
no flags Details
git-am fix for 4.4.next, 4.3.next. (1.75 KB, patch)
2016-06-22 16:47 UTC, Jeremy Allison
uri: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Allison 2016-06-21 22:47:39 UTC
Discovered against the Microsoft Azure SMB2 server.

Doing :

smbclient //azure/share -mSMB3
> mkdir test
> cd test
> ls
  .                                   D        0  Tue Jun 21 14:59:16 2016
  ..                                  D        0  Tue Jun 21 14:59:16 2016
Error in dskattr: NT_STATUS_OBJECT_NAME_INVALID

smbclient passes the string "\\test\\" (current directory in smbclient) to cli_smb2_dskattr().

Fix to follow.
Comment 1 Jeremy Allison 2016-06-21 22:58:46 UTC
Created attachment 12194 [details]
git-am fix proposed for master.
Comment 2 Jeremy Allison 2016-06-22 16:47:55 UTC
Created attachment 12199 [details]
git-am fix for 4.4.next, 4.3.next.

Cherry-pick from master. Applies cleanly to 4.4.next, 4.3.next.
Comment 3 Uri Simchoni 2016-06-22 17:17:52 UTC
Comment on attachment 12199 [details]
git-am fix for 4.4.next, 4.3.next.

LGTM.
Comment 4 Uri Simchoni 2016-06-22 17:18:52 UTC
Assigning to Karolin for inclusion in 4.4.next and 4.3.next.
Comment 5 Karolin Seeger 2016-06-24 07:09:06 UTC
(In reply to Uri Simchoni from comment #4)
Pushed to autobuild-v4-[4|3]-test.
Comment 6 Karolin Seeger 2016-07-04 07:13:17 UTC
(In reply to Karolin Seeger from comment #5)
Pushed to both branches.
Closing out bug report.

Thanks!